--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
                 <ul class="list portfolio-card-menu">
                     <!--Row 1-->
                     <!--Project Card 1-->
-                    <li>
+                    <li class="portfolio-card-container">
                         <a class="link" href="">
                             <img src="./images/portfolio/card-1.jpg" alt="концепт інтерфейсу банківського додатку"
                                 width="360" height="300">
@@ -64,7 +64,7 @@
                         </a>
                     </li>
                     <!--Project Card 2-->
-                    <li>
+                    <li class="portfolio-card-container">
                         <a class="link" href="">
                             <img src="./images/portfolio/card-2.jpg" alt="зображення оплати телефоном" width="360"
                                 height="300">
@@ -75,7 +75,7 @@
                         </a>
                     </li>
                     <!--Project Card 3-->
-                    <li>
+                    <li class="portfolio-card-container">
                         <a class="link" href="">
                             <img src="./images/portfolio/card-3.jpg"
                                 alt="додатки з медитації зображення відкритого працюючого ноутбука" width="360"
@@ -88,7 +88,7 @@
                     </li>
                     <!--Row 2-->
                     <!--Project Card 4-->
-                    <li>
+                    <li class="portfolio-card-container">
                         <a class="link" href="">
                             <img src="./images/portfolio/card-4.jpg"
                                 alt="зображення таксі сервісу з закріпленим смартфоном в авто" width="360" height="300">
@@ -99,7 +99,7 @@
                         </a>
                     </li>
                     <!--Project Card 5-->
-                    <li>
+                    <li class="portfolio-card-container">
                         <a class="link" href="">
                             <img src="./images/portfolio/card-5.jpg" alt="зображення дизайну екранної галереї"
                                 width="360" height="300">
@@ -110,7 +110,7 @@
                         </a>
                     </li>
                     <!--Project Card 6-->
-                    <li>
+                    <li class="portfolio-card-container">
                         <a class="link" href="">
                             <img src="./images/portfolio/card-6.jpg"
                                 alt="Онлайн курси маркетингу зображення усміхненої жінки з гарнітурою" width="360"
@@ -123,7 +123,7 @@
                     </li>
                     <!--Row 3-->
                     <!--Project Card 7-->
-                    <li>
+                    <li class="portfolio-card-container">
                         <a class="link" href="">
                             <img src="./images/portfolio/card-7.jpg" alt="Концепт хображеннь сторіс в Інстаграм"
                                 width="360" height="300">
@@ -134,7 +134,7 @@
                         </a>
                     </li>
                     <!--Project Card 8-->
-                    <li>
+                    <li class="portfolio-card-container">
                         <a class="link" href="">
                             <img src="./images/portfolio/card-8.jpg" alt="Зображення свіжих овочів в сітці" width="360"
                                 height="300">
@@ -145,7 +145,7 @@
                         </a>
                     </li>
                     <!--Project Card 9-->
-                    <li>
+                    <li class="portfolio-card-container">
                         <a class="link" href="">
                             <img src="./images/portfolio/card-9.jpg" alt="зображення процесу додавання молока в каву"
                                 width="360" height="300">
